little polishing details

--- a/src/styles/styles/banner.scss
+++ b/src/styles/styles/banner.scss
@@ -6,6 +6,10 @@
   font-family: 'Cutive Mono', monospace;
 }
 
+.main-buttons {
+  font-size: 18px;
+}
+
 .header-style {
   background-color: black;
   color: white;
