--- a/src/styles/styles/placeShow.scss
+++ b/src/styles/styles/placeShow.scss
@@ -56,10 +56,13 @@
     background-color: rgb(56, 165, 39);
   }
 
+  .img-size {
+    min-height: 90%;
+  }
+
 }
 
 .card {
   height: 100%;
-  
 }
 
